# YouTube-Automation-Tool

./: .replit  PRODUCT_MANUAL.md  Pasted-Job-Description-We-are-seeking-a-skilled-software-developer-to-create-an-automation-tool-that-str-1728702990595.txt  README.md  app.py  models.py  pyproject.toml  replit.md  utils.py
instance/: youtube_automation.db
static/css/: custom.css
static/js/: main.js
templates/: base.html  index.html  manual.html
