[project]
name = "repl-nix-autotasker"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.9",
    "nltk>=3.9.1",
    "speechrecognition>=3.10.4",
    "pydub>=0.25.1",
    "google-api-python-client>=2.149.0",
    "google-auth-oauthlib>=1.2.1",
]
